    <resources>
        <string name="app_name">ComponentesBasicos</string>
        <string name="toggle_turn_on">Turn On</string>
        <string name="toggle_turn_off">Turn Off</string>
        <string name="btn_display">Display</string>

        <string name="example_edittext">Example showing EditText</string>
        <string name="show_the_text">Show the Text</string>
        <string name="enter_text">text changes</string>

        <string name="title_activity_overflow_menu">OverflowMenu</string>

        <string name="red_string">Red</string>
        <string name="green_string">Green</string>
        <string name="yellow_string">Yellow</string>


        <string name="title_activity_drawer">DrawerActivity</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Felipe R. Lemos</string>
        <string name="nav_header_subtitle">feliperaulino@alu.ufc.br</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="menu_editText">Edit Text</string>
        <string name="menu_arrayList">Array List</string>
        <string name="menu_autoComplete">Auto Complete</string>
        <string name="menu_spinners">Spinners</string>
        <string name="menu_radioButtons">Radio Buttons</string>
        <string name="menu_overflowMenu">Options Menu</string>
        <string name="menu_popupMenu">Popup Menu</string>
        <string name="menu_longPress">Clique Longo</string>
        <string name="menu_backgroundImage">Imagem de fundo</string>
        <string name="menu_multipleTabs">Activity com Múltiplas Tabs</string>
        <string name="menu_listView">List View</string>
        <string name="menu_arrayAdapter">Array Adapter</string>
        <string name="menu_gridView">Grid View</string>
        <string name="menu_som">Som</string>


        <string-array name="sports_array">
            <item>Shuttle Badminton</item>
            <item>Tennis</item>
            <item>FootBall</item>
            <item>Basket Ball</item>
            <item>Table Tennis</item>
            <item>Chess</item>
            <item>Hockey</item>
        </string-array>

        <string name="message_fragment">Message Appear here</string>


</resources>